# Velocity-Dex

./: .gitignore  Cargo.toml  LICENSE  README.md  Workspace.txt  velocity.wal
crates/api-server/: Cargo.toml  build.rs
crates/api-server/src/: main.rs
crates/bench-tool/: Cargo.toml  build.rs
crates/bench-tool/src/: main.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs  processor.rs  wal.rs
crates/trading-cli/: Cargo.toml  build.rs
crates/trading-cli/src/: main.rs
proto/: trading.proto
