# ==============================================================================
#                 VELOCITY-DEX - VIRTUAL WORKSPACE MANIFEST
# ==============================================================================
[workspace]
resolver = "2"
members = [
    "crates/engine-core",
    "crates/api-server",
    "crates/common", 
    "crates/event-bus",
    "crates/storage"
]

# ==============================================================================
#                        DEPENDENSI BERSAMA (WORKSPACE)
# ==============================================================================
[dependencies]
# Concurrency & Runtime
tokio = { version = "1", features = ["full"] }  # Async Runtime 
rayon = "1.8"                                   # Parallel processing untuk task non-orderbook 
crossbeam = "0.8"                               # Lock-free channels
parking_lot = "0.12"                            # Mutex yang lebih cepat dari std::sync

# Serialization & Performance
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"                                 # Jauh lebih cepat dari JSON untuk internal messaging
slab = "0.4"                                    # Memory reuse/pooling

# Networking
tonic = "0.10"                                  # gRPC
prost = "0.12"                                  # Protobuf implementation

# Low-level Utils
thiserror = "1.0"
tracing = "0.1"                                 # Distributed logging [cite: 10]